--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -29,10 +29,10 @@ build:
   verbosity: minimal
 
 after_build:
-- ps: nuget pack Package.nuspec -version "$env:nugetVersion"
+- ps: nuget pack src\Quasar.Collections.Paging\Package.nuspec -version "$env:nugetVersion"
 
 artifacts:
-- path: '*.nupkg'
+- path: 'Quasar.Collections.Paging*.nupkg'
   name: nuget-package
 
 deploy:
