--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -10,7 +10,7 @@ init:
 
 assembly_info:
   patch: true
-  file: '**AssemblyInfo.*'
+  file: '**Quasar.Collections.Paging\AssemblyInfo.*'
   assembly_version: '$(buildVersion)'
   assembly_file_version: '$(buildVersion)'
   assembly_informational_version: '$(nugetVersion)'
@@ -29,7 +29,7 @@ build:
   verbosity: minimal
 
 after_build:
-- ps: nuget pack \src\Quasar.Collections.Paging\Package.nuspec -version "$env:nugetVersion"
+- ps: nuget pack src\Quasar.Collections.Paging\Package.nuspec -version "$env:nugetVersion"
 
 artifacts:
 - path: 'Quasar.Collections.Paging*.nupkg'
