--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -30,7 +30,7 @@ build:
   verbosity: minimal
 
 after_build:
-- ps: nuget pack "\Package.nuspec" -version "$env:nugetVersion"
+- ps: nuget pack "Package.nuspec" -version "$env:nugetVersion"
 
 artifacts:
 - path: '**\*.nupkg'
