--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -4,7 +4,7 @@ environment:
   packageVersion: 0.1.0
 
 init:
-- ps: $env:projectPath = "C:\projects\quasar\src\Quasar.Collections.Paging"
+- ps: $env:projectPath = "src\Quasar.Collections.Paging"
 - ps: $env:buildVersion = "$env:packageVersion.$env:appveyor_build_number"
 - ps: $env:nugetVersion = "$env:packageVersion.$env:appveyor_build_number"
 - ps: Update-AppveyorBuild -Version $env:buildVersion
@@ -30,7 +30,7 @@ build:
   verbosity: minimal
 
 after_build:
-- ps: nuget pack src\Quasar.Collections.Paging\Package.nuspec -version "$env:nugetVersion"
+- ps: nuget pack "$env:projectPath\Package.nuspec" -version "$env:nugetVersion"
 
 artifacts:
 - path: '**\*.nupkg'
