--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -11,7 +11,7 @@ init:
 
 assembly_info:
   patch: true
-  file: '**Quasar.Collections.Paging*\AssemblyInfo.*'
+  file: '**Quasar.Collections.Paging**\AssemblyInfo.*'
   assembly_version: '$(buildVersion)'
   assembly_file_version: '$(buildVersion)'
   assembly_informational_version: '$(nugetVersion)'
@@ -33,7 +33,7 @@ after_build:
 - ps: nuget pack "$env:projectPath\Package.nuspec" -version "$env:nugetVersion"
 
 artifacts:
-- path: '**Quasar.Collections.Paging*\*.nupkg'
+- path: '**Quasar.Collections.Paging**\*.nupkg'
   name: nuget-package
 
 deploy:
