--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -11,7 +11,7 @@ init:
 
 assembly_info:
   patch: true
-  file: '**Quasar.Collections.Paging\Properties\AssemblyInfo.*'
+  file: '**\Quasar.Collections.Paging\Properties\AssemblyInfo.*'
   assembly_version: '$(buildVersion)'
   assembly_file_version: '$(buildVersion)'
   assembly_informational_version: '$(nugetVersion)'
