--- a/src/Quasar.Collections.Paging/project.json
+++ b/src/Quasar.Collections.Paging/project.json
@@ -10,4 +10,9 @@
       "imports": "dnxcore50"
     }
   }
+  //"scripts": {
+  //  "postcompile": [
+  //    "dotnet pack --no-build --configuration %compile:Configuration%"
+  //  ]
+  //}
 }
