--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -29,8 +29,8 @@ before_build:
 build:
   verbosity: minimal
 
-after_build:
-- ps: nuget pack "$env:projectPath\Package.nuspec" -version "$env:nugetVersion"
+#after_build:
+#- ps: nuget pack "$env:projectPath\Package.nuspec" -version "$env:nugetVersion"
 
 artifacts:
 - path: '**Quasar.Collections.Paging**\*.nupkg'
