--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -44,7 +44,7 @@ build:
 #- ps: nuget pack "$env:projectPath\Package.nuspec" -version "$env:nugetVersion"
 
 artifacts:
-- path: .\Quasar.Collections.Paging\**\*.nupkg #'src\Quasar.Collections.Paging\bin\Release\Quasar.Collections.Paging.1.0.0.nupkg'
+- path: 'src\Quasar.Collections.Paging\bin\Release\Quasar.Collections.Paging.1.0.0.nupkg' #.\Quasar.Collections.Paging\**\*.nupkg
   name: nuget-package
 
 deploy:
