--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -43,6 +43,9 @@ build:
 #after_build:
 #- ps: nuget pack "$env:projectPath\Package.nuspec" -version "$env:nugetVersion"
 
+after-build:
+- ps: dotnet pack .\src\Quasar.Collections.Paging -c $env:CONFIGURATION -o .\artifacts --version-suffix=$env:APPVEYOR_BUILD_NUMBER
+
 artifacts:
 - path: 'src\Quasar.Collections.Paging\bin\Release\Quasar.Collections.Paging.1.0.0.nupkg' #.\Quasar.Collections.Paging\**\*.nupkg
   name: nuget-package
