--- a/src/Quasar.Collections.Paging/appveyor.yml
+++ b/src/Quasar.Collections.Paging/appveyor.yml
@@ -10,14 +10,14 @@ branches:
   - master
 
 init:
-- ps: $env:projectPath = "src\Quasar.Collections.Paging"
+- ps: $env:projectPath = ".\src\Quasar.Collections.Paging"
 - ps: $env:buildVersion = "$env:packageVersion.$env:appveyor_build_number"
 - ps: $env:nugetVersion = "$env:packageVersion.$env:appveyor_build_number"
 - ps: Update-AppveyorBuild -Version $env:buildVersion
 
 assembly_info:
   patch: true
-  file: '**\Quasar.Collections.Paging\Properties\AssemblyInfo.*'
+  file: .\$env:projectPath\**\AssemblyInfo.*
   assembly_version: '$(buildVersion)'
   assembly_file_version: '$(buildVersion)'
   assembly_informational_version: '$(nugetVersion)'
@@ -44,10 +44,10 @@ build:
 #- ps: nuget pack "$env:projectPath\Package.nuspec" -version "$env:nugetVersion"
 
 after_build:
-- ps: dotnet pack .\src\Quasar.Collections.Paging -c $env:CONFIGURATION -o .\artifacts --version-suffix=$env:APPVEYOR_BUILD_NUMBER
+- ps: dotnet pack $env:projectPath -c $env:CONFIGURATION -o .\artifacts --version-suffix=$env:APPVEYOR_BUILD_NUMBER
 
 artifacts:
-- path: 'src\Quasar.Collections.Paging\bin\Release\Quasar.Collections.Paging.1.0.0.nupkg' #.\Quasar.Collections.Paging\**\*.nupkg
+- path: .\artifacts\**\*.nupkg
   name: nuget-package
 
 deploy:
