--- a/src/Quasar.Collections.Paging/project.json
+++ b/src/Quasar.Collections.Paging/project.json
@@ -1,5 +1,5 @@
 ﻿{
-  "version": "0.9.0-*",
+  "version": "0.9.1",
   "name": "Quasar.Collections.Paging",
   "title": "Quasar Collections Paging",
   "copyright": "Copyright ©2016 Inobil",
