--- a/src/Quasar.Collections.Paging/project.json
+++ b/src/Quasar.Collections.Paging/project.json
@@ -1,4 +1,5 @@
 ﻿{
+  "version": "0.9-*",
   "name": "Quasar.Collections.Paging",
   "title": "Quasar Collections Paging",
   "copyright": "Copyright ©2016 Inobil",
@@ -12,7 +13,11 @@
     "projectUrl": "https://github.com/ugurozsahin/quasar",
     "releaseNotes": ".Net Core Paging For IEnumerable Objects",
     "summary": ".Net Core Paging For IEnumerable Objects",
-    "tags": [ "paging", "collections", "page", "dotnetcore", "core", ".net" ]
+    "tags": [ "paging", "collections", "page", "dotnetcore", "core", ".net" ],
+    "repository": {
+      "type": "git",
+      "url": "git://github.com/ugurozsahin/quasar"
+    }
   },
 
   "dependencies": {
